tests/samples/negative/types/array_literal_element_type_mismatch.ax
module array_literal_element_type_mismatch;

fn main() -> i32 {
    let values: [2]u8 = [1, 300];
    return cast<i32>(values[0]);
}
